--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Happy Birthday</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="small.css">
+	<link rel="stylesheet" type="text/css" href="small.css" media="(max-width: 600px)">
 </head>
 <body>
 	<div class="container">
-		<section class="hero">
+		<section class="hero">	
 			<img src="hb.jpg">
 		</section>
 		<section>
